syntax="proto3";

service TopCollector {
    rpc GetMergedData(TopRequest) returns (TopResponse);
}

message TopData {
    string Symbol = 1;
    int32 Rank = 2;
    float Score = 3;
}

message TopResponse {
    repeated TopData coin = 1;
} 
message TopRequest {

}